--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,12 +11,25 @@ html {
 body {
   line-height: 1;
   font-family: 'Roboto', sans-serif;
+  /* overflow-x: hidden !important; */
+}
+body::-webkit-scrollbar{
+  width: 1.5rem;
+}
+body::-webkit-scrollbar-track{
+ box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); */
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #F6762C;
+   border-radius: 10px; 
 }
 ul,
 li,
 ol {
   list-style: none;
 }
+
 a {
   text-decoration: none;
   color: #333;
@@ -107,3 +120,54 @@ input {
 }
 
 
+/* food section */
+figure{
+  overflow: hidden; 
+  
+}
+.food-section{
+  background-color: #1C1C1C;
+}
+.food_section-conatiner{
+  display: grid;
+  grid-template-columns: repeat(4 , 1fr);
+  padding: 8rem 15rem;
+  gap: 31px;
+}
+.cards{
+  background-color: #312F30;
+  border-radius: 14px;
+ 
+}
+.cards .info-card{
+  padding: 2rem 1rem 5rem 1rem ;
+}
+
+.img-card .food-img{
+  width: 100%;
+}
+
+ .food-img:hover{
+  transform: scale(1.3);
+  transition: all 0.6s ease-in-out;
+  
+}
+.boxes-title ,
+.boxes-lead{
+  text-align: center;
+}
+.boxes-title {
+  color: #fff;
+  font-weight: 500;
+  font-size: 2.4rem;
+}
+.info-card .boxes-lead{
+  color: #fff;
+  font-weight: 300;
+  opacity: 0.7;
+  font-size: 1.8rem;
+  max-width: 300px;
+  margin: 2rem auto;
+  line-height: 1.3;
+
+}
