--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,9 @@
-
+:root {
+  --bg-color-main: #f6762c;
+  --main-text-color: #fff;
+  --bg-color-dark: #1c1c1c;
+  --bg-color-light: #312f30;
+}
 /* css reset */
 * {
   box-sizing: border-box;
@@ -11,19 +16,19 @@ html {
 }
 body {
   line-height: 1;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   /* overflow-x: hidden !important; */
 }
-body::-webkit-scrollbar{
+body::-webkit-scrollbar {
   width: 1.5rem;
 }
-body::-webkit-scrollbar-track{
- box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); */
+body::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 
 body::-webkit-scrollbar-thumb {
-  background-color: #F6762C;
-   border-radius: 10px; 
+  background-color: #f6762c;
+  border-radius: 10px;
 }
 ul,
 li,
@@ -42,189 +47,258 @@ input {
 }
 h1,
 h2,
-h3 ,
-h4 ,
-h5 ,
-h6{
-  color: #fff;
+h3,
+h4,
+h5,
+h6 {
+  color: var(--main-text-color);
   font-weight: 500;
 }
-p{
-  color: #fff;
+p {
+  color: var(--main-text-color);
   opacity: 0.7;
   font-weight: 400;
 }
 /* buttons */
-.btn{
-    display: inline-block;
-    color: #fff;
-    font-size: 1.8rem;
-   font-weight: 500;
-    padding: 2rem 3rem;
-    border-radius: 5px;
-    cursor: pointer;
-  
+.btn {
+  display: inline-block;
+  color: var(--main-text-color);
+  font-size: 1.8rem;
+  font-weight: 500;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: var(--bg-color-main);
 }
-.btn-primary{
-    background-color:  #F6762C;
+.btn-primary {
+  padding: 2rem 3rem;
 }
-.btn-primary:hover{
-   border: 1px solid #F6762C;
-   background: none;
-   color: #F6762C;
+
+.btn-primary:hover {
+  border: 1px solid var(--bg-color-main);
+  background: none;
+  color: var(--bg-color-main);
 }
+.btn-secondary {
+  padding: 2rem 5rem;
+}
+
 /* main style css */
-.header{
-    background-image: url("../assets/hero-section.png");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    height: 100vh;
-
-    
-} 
-.main-menu .list-menu{
-    display: flex;
+.header {
+  background-image: url("../assets/hero-section.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 100vh;
 }
-.link-list{
-    color: #fff;
-    margin: 0 1rem;
-    font-size: 1.7rem;
-    opacity: 0.8;
-    
+.main-menu .list-menu {
+  display: flex;
 }
-.strong{
-    color: #fff;
-    font-weight: 700;
-    opacity: 1;
+.link-list {
+  color: var(--main-text-color);
+  margin: 0 1rem;
+  font-size: 1.7rem;
+  opacity: 0.8;
 }
-.nav{
-    display: flex;
-    align-items: center;
-   justify-content: space-between;
+.strong {
+  color: var(--main-text-color);
+  font-weight: 700;
+  opacity: 1;
+}
+.nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   padding: 1.5rem 10rem;
-   
 }
-.img-logo{
-   width: 130px;
-}
-
-.hero-section{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    color: #fff;
-    padding: 10rem 15rem 0rem 15rem;
-    
-}
-.short-title{
-    font-size: 1.7rem;
-}
-.title-info{
-    font-size: 6rem;
-    max-width: 600px;
-    margin: 2rem 0;
-}
-.hero-description{
-    max-width: 600px;
-    font-size: 2rem;
-    line-height: 1.5;
-   
-    margin-bottom:2rem ;
+.img-logo {
+  width: 130px;
 }
 
+.hero-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: var(--main-text-color);
+  padding: 10rem 15rem 0rem 15rem;
+}
+.short-title {
+  font-size: 1.7rem;
+}
+.title-info {
+  font-size: 6rem;
+  max-width: 600px;
+  margin: 2rem 0;
+}
+.hero-description {
+  max-width: 600px;
+  font-size: 2rem;
+  line-height: 1.5;
+
+  margin-bottom: 2rem;
+}
 
 /* food section */
-figure{
-  overflow: hidden; 
-  
+figure {
+  overflow: hidden;
 }
-.food-section{
-  background-color: #1C1C1C;
+.food-section {
+  background-color: var(--bg-color-dark);
 }
-.food_section-conatiner{
+.food_section-conatiner {
   display: grid;
-  grid-template-columns: repeat(4 , 1fr);
+  grid-template-columns: repeat(4, 1fr);
   padding: 8rem 15rem;
   gap: 31px;
 }
-.cards{
-  background-color: #312F30;
+.cards {
+  background-color: var(--bg-color-light);
   border-radius: 14px;
- 
 }
-.cards .info-card{
-  padding: 2rem 1rem 5rem 1rem ;
+.cards .info-card {
+  padding: 2rem 1rem 5rem 1rem;
 }
 
-.img-card .food-img{
+.img-card .food-img {
   width: 100%;
 }
 
- .food-img:hover{
+.food-img:hover {
   transform: scale(1.3);
   transition: all 0.6s ease-in-out;
-  
 }
-.boxes-title ,
-.boxes-lead{
+.boxes-title,
+.boxes-lead {
   text-align: center;
 }
 .boxes-title {
- 
   font-size: 2.4rem;
 }
-.info-card .boxes-lead{
-
+.info-card .boxes-lead {
   font-weight: 300;
   opacity: 0.7;
   font-size: 1.8rem;
   max-width: 300px;
   margin: 2rem auto;
   line-height: 1.3;
-
 }
-.section-order-burger{
-  background-color:#312F30;
+.section-order-burger {
+  background-color: var(--bg-color-light);
 }
-.container-order{
+.container-order {
   display: flex;
   align-items: center;
   justify-content: space-between;
-   padding: 3rem 20rem; 
+  padding: 3rem 20rem;
 }
-.order-information{
+.order-information {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
- 
 }
-.order-info_title{
- 
+.order-info_title {
   font-size: 5rem;
- 
 }
-.order-info_lead{
+.order-info_lead {
   max-width: 500px;
   font-size: 1.8rem;
   font-weight: 400;
   line-height: 1.3;
   margin: 2rem 0;
 }
-.span{
+.span {
   display: flex;
   align-items: center;
   gap: 9px;
   margin-bottom: 12px;
 }
-.big-cost{
-  color: #F6762C;
+.strong {
+  color: var(--bg-color-main);
   font-size: 2rem;
 }
-.small-cost{
-  color: #F6762C;
+.thin {
+  color: var(--bg-color-main);
   opacity: 0.7;
-  font-size:1.7rem ;
-  text-decoration:line-through;
+  font-size: 1.7rem;
+  text-decoration: line-through;
 }
+.section-products {
+  background-color: #1c1c1c;
+  padding: 4rem 17rem;
+}
+
+.info-text-title {
+  font-size: 2.6rem;
+}
+.info-text-lead {
+  font-size: 1.8rem;
+  width: 300px;
+}
+
+.product-section {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(500px, 2fr));
+  gap: 40px;
+}
+
+.bg-1 {
+  background-image: url("../assets/coffe-img.png");
+  background-size: cover;
+  height: 350px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: center;
+  padding: 2rem;
+}
+.bg-1 .order-food-gallery,
+.bg-2 .order-food-gallery,
+.bg-3 .order-food-gallery ,
+.bg-4 .order-food-gallery{
+  color: var(--main-text-color);
+  font-size: 2.7rem;
+}
+.bg-1 .order-lead-gallery,
+.bg-2 .order-lead-gallery ,
+.bg-3 .order-lead-gallery,
+.bg-4 .order-lead-gallery {
+  color: var(--main-text-color);
+  opacity: 0.7;
+  font-size: 1.7rem;
+  margin: 2rem 0;
+  max-width: 250px;
+  line-height: 1.4;
+}
+.bg-2 {
+  background-image: url("../assets/pizza-img-section.png");
+  background-size: cover;
+  height: 350px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  padding: 4rem;
+}
+
+
+.bg-3 {
+  background-image: url("../assets/burger-king-section.png");
+  background-size: cover;
+  height: 350px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: center;
+}
+
+.bg-4 {
+  background-image: url("../assets/sandwich-section.png");
+  background-size: cover;
+  height: 350px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  padding: 4rem;
+}
+
